crates/apollo-compiler/test_data/diagnostics/0046_duplicate_directive_arguments.txt
Error: the argument `url` is provided multiple times
   ╭─[0046_duplicate_directive_arguments.graphql:1:75]
   │
 1 │ scalar newScalar @specifiedBy(url: "https://tools.ietf.org/html/rfc4122", url: "https://tools.ietf.org/html/rfc4125")
   │                               ─────────────────────┬────────────────────  ─────────────────────┬────────────────────  
   │                                                    ╰────────────────────────────────────────────────────────────────── previously provided `url` here
   │                                                                                                │                      
   │                                                                                                ╰────────────────────── `url` provided again here
   │ 
   │ Help: `url` argument must only be provided once.
───╯
Error: the argument `if` is provided multiple times
   ╭─[0046_duplicate_directive_arguments.graphql:5:40]
   │
 5 │   response: String @example(if: false, if: true)
   │                             ────┬────  ────┬───  
   │                                 ╰──────────────── previously provided `if` here
   │                                            │     
   │                                            ╰───── `if` provided again here
   │ 
   │ Help: `if` argument must only be provided once.
───╯

